# motar_mini

./: CMakeLists.txt  README.md  amcl.rviz  my_map.pgm  my_map.yaml  package.xml  urdf.rviz
config/: joint_names_motar_mini.yaml
launch/: avoidance.launch  control.launch  motar_rviz.launch  motar_rviz_amcl.launch  motar_rviz_mapping.launch  motar_with_map.launch  motar_world.launch  motarmini_gazebo.launch  motarmini_rviz.launch  motarmini_slam.launch  rosserial.launch  sonar_array.launch
meshes/: Dolap.STL  Kapak.STL  Lidar.dae  Mentese1.STL  Mentese2.STL  SF.STL  SL.STL  SR.STL  SWh1.STL  SWh2.STL  SWhDir.STL  SWhSup1.STL  SWhSup2.STL  SWheel.STL  SWheel1.STL  SWheel2.STL  SWheelbase.STL  US1.STL  US2.STL  US3.STL  Wheel1.STL  Wheel2.STL  base_link.STL  leftWheel.STL  lidar.STL  rightWheel.STL
msg/: dprm.msg
navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
navigation/launch/: amcl.launch
navigation/maps/: test_map.pgm  test_map.yaml
scripts/: denemecode.txt  motar_control_sub.py  motar_keyboard.py  motar_mini_keyboard.py  sensor_data_listener.py  waypoint_nav.py
scripts/Interface/: Hospital_data.xlsx  interface.py  konumlar.txt  login.db  login.py  signup.py
scripts/Ui/: interface.ui  login.ui  signup.ui
urdf/: motar_mini.csv  motar_mini.urdf
worlds/: MOTAR.sdf  model.config
